tests/errors/from_json_invalid_enum.dang
enum Status { PASSED FAILED }

type Child {
  pub name: String!
  pub outcome: Status!
}

type Summary {
  pub children: [Child!]!
}

let summary: Summary! = fromJSON("""
{
  "children": [
    {"name": "one", "outcome": "Skipped"}
  ]
}
""")
